{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "796b8bde-c975-4826-852c-7d0b59f513a0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "5a155c68-680e-442b-b0e6-a1466fb96cc2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "39a065df-d687-45ce-aab8-2dcc01f03216",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "333b3b2e-022e-400c-bcd4-0caa9d5f2fbb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "063bf232-e260-4ec4-bbb8-7558a9c91fd9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1064ffd3-a216-411e-92ad-f8a72df95464",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7da44532-141d-457f-86df-4ab6b1d90126",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftStick",
                    "id": "bee0826b-90df-467d-9d54-ebd9c6dda36c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e00f61f6-1a3f-47c9-a341-44f0aab55bf6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fbb7d2d1-c1b8-47bb-9919-755d2fff406b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "702c72ae-da86-4712-93f9-75341c2875df",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc709b3d-3e07-4f52-b0b9-e93ffd2e3085",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "377e4c4d-4730-412e-a35f-7d3b5311e4b9",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "8d18326b-4166-469e-9f98-c67fb800f9fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "9d43a445-cf73-4608-ba47-63e2eee0cf7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action2",
                    "type": "Button",
                    "id": "661afbc1-3c8c-48af-a3b4-dfdbe5f0cf8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6dcabd8b-c489-4ec0-9779-2ed5bb7daf58",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29f19bd7-ead0-4860-9a1e-6962ca525a3d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "478a6ed8-49c1-4d33-b96f-5404a3fd9427",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouselook",
            "id": "3be214f7-4d3d-4e65-904d-1d5d7be3fede",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "e2a9f95b-51aa-4e3f-9722-1659ad8b92db",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "0cf97305-b653-4d72-adfc-5bb1796c5857",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "14bf89e9-9a0f-46c4-abe5-7056bfac3499",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8da4f0ba-47a0-43f9-afc5-975c32bc9924",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}